marklogic-data-hub-central/ui/src/components/entities/mapping/source-entity-map/source-to-entity-map.module.scss
.mapContainer{
    top: 8px;
}
.header{
    display:inline-flex;
}
.headerTitle{
    font-size: 1.5em;
    width: fit-content;
}

.saveMessage{
    border: 1px solid #ff0000;
    margin-left: 30em;
}
.noMessage{
    padding: 19.5px 0vh;
}
.parentContainer{
    display: flex;
    flex-direction: row;
    padding-bottom: 1vh;
    padding-top: 1vh;
    height: 80vh;
}

.sourceContainer{
    width: auto;
    height: auto;
    flex: 4;
    display: flex;
    flex-direction: column;
    padding-right: 20px;
    padding-left: 20px;
    word-break: break-all;
}

.sourceTable {
    & thead > tr > th {
        background-color: #fafafa;
        line-height: 2px;
      };
    & tbody > tr > td {
        line-height: 2px;
    }
}
.sourceTableRows{
    line-height: 1px;
}

.filterContainer {
    padding: 8px
}
.searchInput {
    min-width: 8vw;
    margin-bottom: 8px;
    display: block
}
.resetButton {
    width: 90px;
    margin-right: 8px
}

.searchSubmitButton {
    width: 90px
}

.highlightStyle {
    background-color: #ffc069;
    padding: 0px
}


.entityContainer{
    width: auto;
    flex: 9;
    display: flex;
    flex-direction: column;
    padding-right: 20px;
    padding-left: 20px;
    word-break: break-all;

    > .entityDetails{
        display: inline-block;
        vertical-align: middle;
        //height: 5vh;
        margin-bottom: 3px;
        > .entityTypeTitle{
            float: left;
            padding-top: 6px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    > .columnOptionsSelectorContainer {
        display: inline-block;
        margin-bottom: 10px;
        > .expandCollapseBtn {
            width: 102px;
            height: 32px;
        }
        > .columnOptionsSelector{
            float: right;
            margin-top: 10px;
        }
    }
}

.DropdownMenuItem {
    display: flex;
    vertical-align: middle;
    max-height: 3vh;
}

.columnSelectorOverlay{
    border: 1px solid rgba(0, 0, 0, 0.2);
    box-sizing: border-box;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.checkBoxItem{
    line-height: 2vh;
    margin-top: 4px;
}

.btn_icons{
    float: right;
    padding-right: 4px;
}
hr {
    display: block;
    margin-top: 2em;
    margin-bottom: -0.5em;
    margin-left: -1.5em;
    margin-right: -1.5em;
}
.entityTable {
    & thead > tr > th {
        background-color: #fafafa;
        padding-top: 12px;
        padding-bottom: 12px;
      };
    & tbody > tr > td {
        line-height: 2px;
        vertical-align: top;
    }
}

.typeContainer {
    margin-bottom: -17px;

    > .typeContextContainer {
        margin-top: -13px;
        margin-bottom:-14px;
        > .typeContext {
            color: #777777;
            font-size: 12px
        }

        >.typeText{
            margin-top: 10px
        }
    }
}

.mapExpParentContainer{
    //display: inline;
    margin-top: -12px;
    margin-bottom: -12px;

    >.validationErrors {
        width: 22vw;
        line-height: normal;
        padding-top: 6px;
        padding-left: 2px;
        padding-bottom: 4px;
        color: #DB4f59;
        word-break: break-all;

    }
}

.mapExpressionContainer {
    width: 100%;
    display: inline-flex;
    vertical-align: top;
    align-items: flex-start;
}

.mapExpression{
    width: 100%;
    line-height: 1px;
    vertical-align: top;
    //justify-content: top;
}

.mapValue {
    margin-top: -6px;
    margin-bottom: -8px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: normal;
}

.entityIcon{
    background: transparent;
    border: none;
    color: #ffc53dd6;
}
.emptyCard {
    background-color: #fff7e6;
    border: 1px solid #ffc53dd6;
    flex-wrap: wrap;
    padding-right: 1px;
    padding-left: 1px;
}
.emptyText {
    word-break: keep-all;
}
.testButtons{
    align-items: flex-end;
    float: right;
}
.entityDetails{
    align-items: flex-start;
    float: left;
}
.sourceDetails{
    padding-top: 5px;
    //margin-bottom: -14px;
}
.sourceDataIcon {
    background: transparent;
    border: none;
    color: #7F86B5;
}

.namespace{
    color: #5B69AF;
    cursor: pointer;
}

.toolTipForValues{
    cursor: pointer;
}
.listIcon{
    background: transparent;
    border: none;
    color: #394494;
    display: inline-block;
    vertical-align: top;
    margin-top: 4px;
    font-size: 20px;
    cursor: pointer;
}

.functionIcon{
    color: #394494;
    font-size: 14px;
    width: 22px;
    height: 18px;
    border: 1px solid #394494;
    border-radius: 2px;
    padding: 0px 0px 0px 0px;
    cursor: pointer;
    display: inline-block;
    vertical-align: top;
    text-align: center;
    align-items: center;
    margin-top: 5px;
}
.questionCircle {
    font-size: 12px;
    color: #ACB0CF;
}

.xpathDoc{
    color: black;
}

.docLink{
    cursor: pointer;
    margin-left: -5px;
}

.contextHelp{
    width: 14vw;
    word-wrap: normal;
    font-size: 14px;
    color: #777777;
}
.expandIcon{
    //color: black;
    vertical-align:middle;
    text-align: left;
    font-size: 11px;
}

.inputURIContainer{
    //display: inline-flex;
    //float: left;
    margin-left: -4px;
    vertical-align: middle;
    text-align: left;
    //border: 1px solid red;
    width: 105%;
}
.uriEditing{
    display: inline-block;
    width: 330px;
}

.sourceQuery{
    padding-bottom: 5px;
    margin-left: -4px;
}
.uri{
    margin-left: -4px;
    padding: 4px 0px;
    height : 32px;
}

.showingEditContainer{
    padding-top: 10px;
    padding-bottom:5px;
    margin-bottom: -6px;
}
.showingEditIcon{
    padding: 5px 3px;
    border: 1px solid #E9F7FE;
    color: #394494;
}
.notShowingEditIcon{
    padding-top: 10px;
    padding-right: 2.3em;
    padding-left: 3px;
    margin-left: -3px;
}

.URItext{
    color: #394494;
}

.editIcon{
    font-Size: 27px;
    color: #394494;
    background-color: #b9daed;
    padding: 5px 3px 5px 3px;
    margin-bottom: -2px;
    margin-right: -3px;
    cursor: pointer;
}

.checkIcon{
    background-color: #7F86B5;
    border-radius: 3px;
    padding: 2px 2px;
    color: #ffffff;
    cursor: pointer;
}
.closeIcon{
    background-color: #7F86B5;
    color: #ffffff;
    border-radius: 3px;
    padding: 2px 2px;
    cursor: pointer;
}

.docLinksUl{
    padding-left: 1vw;
}

.navigationCollapseButtons{
    width: 100%;
    display: inline-block;
    justify-content: space-between;
    vertical-align: middle;
    //text-align: center;
    //padding-bottom: 2px;
    margin-top: 2px;
    height: 4.5vh;
}

.navigate_source_uris{
    width: 115px;
    display: flex;
    align-content: center ;
    vertical-align: bottom;
    justify-content: space-between;
    text-align: center;
    margin-top: -32px;
    margin-left: 10vw;
    white-space: nowrap;
  }
 .navigate_uris_left {
    user-select: none;
    cursor: pointer;
    width: 2vw;
    text-align: center;
    align-content: center ;
    justify-content: center;
    background:none;
    outline: none !important;
    > .navigateIcon {
        display: block;
        margin-left: -6px;
    }
  }
  .URI_Index{
    > p {
    border: 1px solid #7F86B5;
    border-radius: 4px;
    background-color: #7F86B5;
    color: #ffffff;
    width: 32px;
    height: 32px;
    padding-top: 4px;

    font-size: 15px;

    }
  }

  .navigate_uris_right {
    user-select: none;
    cursor: pointer;
    width: 2vw;
    background:none;
    outline: none !important;
    text-align: center;
    outline: none;
    align-content: center ;
    justify-content: center;
    > .navigateIcon {
        display: block;
        margin-left: -6px;
    }
  }

  #browse-buttons{
    border: 1px solid rgba(0, 0, 0, 0.961);
  }

